# versurix

./: .gitignore  LICENSE  README.md  pyproject.toml  versurix.py  versurix_config.json
tests/: test_versurix.py
